# Diagnostic_Trio

./: .gitignore  .last-branch  Cargo.toml  README.md  prd.json  prd.validation.json  progress.txt
docs/: ARCHITECTURE.md
trio-host/: Cargo.toml
trio-host/src/: architecture.rs  artifact.rs  boundary.rs  discover.rs  evidence.rs  journal.rs  layer.rs  lib.rs  main.rs  safety.rs  searcher.rs  trace.rs  workspace.rs
trio-reason/: pyproject.toml
trio-reason/tests/: test_architecture.py  test_artifact.py  test_boundary.py  test_discover.py  test_evidence.py  test_journal.py  test_layer.py  test_package.py  test_safety.py  test_searcher.py  test_trace.py  test_workspace.py
trio-reason/trio_reason/: __init__.py  architecture.py  artifact.py  boundary.py  discover.py  evidence.py  journal.py  layer.py  safety.py  searcher.py  trace.py  workspace.py
