[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trio-reason"
version = "0.1.0"
description = "Diagnostic Trio reasoning layer: interpretation, synthesis, and narrative generation"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["mypy", "pytest"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
